--- a/.github/workflows/github-actions_pull.yml
+++ b/.github/workflows/github-actions_pull.yml
@@ -1,9 +1,12 @@
 
 name: GitHub Actions Demo
 run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
-on: [pull_request]
+on:
+    pull_request
+      types: [ labeled ]
 jobs:
   Explore-GitHub-Actions:
+    if: ${{ github.event.label.name == 'bug' }}
     runs-on: ubuntu-latest
     steps:
       - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
