--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
 
-  build:
+  build-db:
 
     runs-on: ubuntu-latest
 
@@ -16,4 +16,20 @@ jobs:
     - uses: actions/checkout@v3
     - name: Build the Docker image
       run: docker build . --file db/Dockerfile --tag my-image-name:$(date +%s)
+  build-web:
 
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v3
+    - name: Build the Docker image
+      run: docker build . --file web/Dockerfile --tag my-image-name:$(date +%s)
+        
+  build-words:
+
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v3
+    - name: Build the Docker image
+      run: docker build . --file words/Dockerfile --tag my-image-name:$(date +%s)
