--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,6 +16,7 @@ jobs:
     - uses: actions/checkout@v3
     - name: Build the Docker image
       run: docker build . --file db/Dockerfile --tag my-image-name:$(date +%s)
+      working-directory: ./db
   build-web:
 
     runs-on: ubuntu-latest
@@ -24,7 +25,8 @@ jobs:
     - uses: actions/checkout@v3
     - name: Build the Docker image
       run: docker build . --file web/Dockerfile --tag my-image-name:$(date +%s)
-        
+      working-directory: ./web
+
   build-words:
 
     runs-on: ubuntu-latest
@@ -33,3 +35,5 @@ jobs:
     - uses: actions/checkout@v3
     - name: Build the Docker image
       run: docker build . --file words/Dockerfile --tag my-image-name:$(date +%s)
+      working-directory: ./words
+
