--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image
-    - env :
+      env :
         DOCKERHUB_USERNAME : ${{ secrets.DOCKERHUB_USERNAME }}
         DOCKERHUB_TOKEN : ${{ secrets.DOCKERHUB_TOKEN }}
         IMAGE_NAME : wordsmith
